--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Hello World</string>
     <string name="display_name">This is my first application</string>
+    <string name="get_message">Get Message</string>
+    <string name="type_message">type message</string>
 </resources>
